# NoteCast-API

./: .gitignore  README.md  _tasks.py  db_manage.py  interface.py  manage.py  pyproject.toml  run.py  tasks.py  worker.py
note_cast/: app.py
note_cast/api/: api_v1.py  api_v2.py
note_cast/api/errors/: __init__.py  categories.py  cloudinary_exception.py  custom_http_exc.py  forbidden.py  internal.py  method_not_allowed.py  not_found.py  podchaser_exception.py  unauthorized.py
note_cast/api/graphql/: __init__.py  inputs.py  interfaces.py  mutations.py  schema.py  types.py  unions.py
note_cast/api/rest/: annotations.py  auth.py  bookmarks.py  callback.py  episodes.py  notes.py  podcasts.py  profile.py  quotes.py  (+2 more)
note_cast/core/: dependencies.py  middlewares.py  settings.py
note_cast/db/: __init__.py  models.py  seed_db.py
note_cast/log/: custom_logging.py  logging_config.json  my_logger.py
note_cast/schemas/: __init__.py  annotation.py  episode.py  forward_refs.py  helpers.py  mixins.py  notes.py  pagination.py  podcast.py  quote.py  response.py  responses.py  user.py
note_cast/security/: login_manager.py  permissions.py
note_cast/services/: google_speech.py  http_utils.py
note_cast/utils/: __init__.py  data.py  database.py  file.py  http.py  password.py  time.py
tasks/: __init__.py  crunch.py  database.py  hybrids.py  network.py  piplines.py  scheduler.py
tests/: seed_db.py  test_note_cast.py
tests/thunder-tests/: thunderActivity.json  thunderCollection.json  thunderEnvironment.json  thunderclient.json
tests/unit/: test_rest_podchaser_podcast.py
(+53 files in other folders)
